--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,14 @@
 
 [package]
 name = "wavy"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Jeron Aldaron Lau <jeronaldaron@gmail.com>"]
 edition = "2018"
 
 license = "MIT / BSL-1.0"
 description = "Cross-platform real-time audio recording & playback."
 documentation = "https://docs.rs/wavy"
-homepage = "https://jeronaldaron.plopgrizzly.com/wavy"
+homepage = "https://jeronaldaron.github.io/wavy"
 repository = "https://github.com/JeronAldaron/wavy"
 readme = "README.md"
 keywords = ["audio", "realtime", "cross-platform", "record", "play"]
