--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,8 @@ readme = "README.md"
 keywords = ["audio", "realtime", "cross-platform", "record", "play"]
 categories = ["game-engines", "hardware-support", "multimedia", "multimedia::audio", "os"]
 
-[dependencies]
+[target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2"
+
+[target.'cfg(target_os = "wasm32")'.dependencies]
+stdweb = "0.4"
