Got wavy to compile on MacOS, does not do anything yet.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-/target
+**/target
 **/*.rs.bk
-Cargo.lock
+**/Cargo.lock
 **/*.wav
 **/*.raw
-/ignore
+**/*.swp
+**/*.DS_Store
+**/ignore
+/audio_queue/play
