Remove Travis build for Windows, since not supported yet.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,9 @@ matrix:
         rust: stable
         compiler: gcc
 
-      - os: windows
-        rust: stable
+      # TODO: add Windows support
+      # - os: windows
+      #   rust: stable
 
       - os: osx
         rust: stable
