Dynamically load libasound (ALSA) on Linux (#4)
* Turn off Travis email notifications.

* Add dl_api file: asound.muon

* Fix asound.muon

* Simplify names of enums in muon file to not be redundant.

* Rename asound.muon to asound,so,2.muon.

* Switch to pat for dl_api.

* Fix MuON file for Alsa.

* Record example verified working with dl_api.

* Remove Travis build for Windows, since not supported yet.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,9 @@ matrix:
         rust: stable
         compiler: gcc
 
-      - os: windows
-        rust: stable
+      # TODO: add Windows support
+      # - os: windows
+      #   rust: stable
 
       - os: osx
         rust: stable
@@ -31,6 +32,7 @@ script:
   - cargo test --all --all-features
 
 notifications:
+  email: false
   webhooks:
     urls:
       - https://cala.zulipchat.com/api/v1/external/travis?api_key=dCMe2lR9z6lOfH1ucaZagWphH6p4TumS&stream=travis-ci&topic=wavy&ignore_pull_requests=false
