--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 # Wavy
 #
-# Copyright © 2019 Jeron Aldaron Lau.
+# Copyright © 2019-2020 Jeron Aldaron Lau.
 # Dual-licensed under either the MIT License or the Boost Software License,
 # Version 1.0.  (See accompanying file LICENSE_BSL.txt or copy at
 # https://www.boost.org/LICENSE_1_0.txt and accompanying file LICENSE_MIT.txt or
@@ -26,3 +26,6 @@ pasts = "0.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 stdweb = "0.4"
+
+[target.'cfg(all(not(target_arch = "wasm32"), target_os = "linux"))'.dependencies]
+smelling-salts = { path = "../../lordaldaron/smelling-salts" }
