Point to pasts on crates.io, now that 0.1 is released.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ keywords = ["audio", "realtime", "cross-platform", "record", "play"]
 categories = ["game-engines", "hardware-support", "multimedia", "multimedia::audio", "os"]
 
 [dev-dependencies]
-pasts = { path = "../pasts" }
+pasts = "0.1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 stdweb = "0.4"
