Use smelling_salts from crates.io, now that 0.1 is released.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,4 +28,4 @@ pasts = "0.1"
 stdweb = "0.4"
 
 [target.'cfg(all(not(target_arch = "wasm32"), target_os = "linux"))'.dependencies]
-smelling-salts = { path = "../smelling-salts" }
+smelling_salts = "0.1"
