Use crate template.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-**/target
-**/*.rs.bk
-**/Cargo.lock
-**/*.wav
-**/*.raw
-**/*.pcm
-**/*.swp
-**/*.DS_Store
-**/ignore
+/target
+/.cargo-ok
+/Cargo.lock
+/**/*.rs.bk
+/**/*.wav
+/**/*.raw
+/**/*.pcm
+/**/*.swp
+/**/*.DS_Store
 /audio_queue/play
