--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ maintenance = { status = "actively-developed" }
 
 # Use cala_core to support all of: wasm-pack, cargo-cala-web and cargo-web
 [target.'cfg(target_arch = "wasm32")'.dependencies.cala_core]
-path = "../cala_core"
+version = "0.1"
 optional = true
 
 [target.'cfg(all(not(target_arch = "wasm32"), any(target_os = "linux", target_os = "android")))'.dependencies]
