--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,9 @@ is-it-maintained-issue-resolution = { repository = "libcala/wavy" }
 is-it-maintained-open-issues = { repository = "libcala/wavy" }
 maintenance = { status = "actively-developed" }
 
+[dependencies.fon]
+version = "0.1"
+
 # Use cala_core to support all of: wasm-pack, cargo-cala-web and cargo-web
 [target.'cfg(target_arch = "wasm32")'.dependencies.cala_core]
 version = "0.1"
@@ -39,6 +42,7 @@ smelling_salts = "0.1"
 
 [dev-dependencies]
 pasts = "0.4"
+twang = { path = "../twang" }
 
 [package.metadata.docs.rs]
 all-features = true
