Wasm32 compiles again.

--- a/examples/stdweb-record/Cargo.toml
+++ b/examples/stdweb-record/Cargo.toml
@@ -17,6 +17,9 @@ version = "0.1"
 [dependencies.pasts]
 version = "0.4"
 
+[dependencies.fon]
+version = "0.2"
+
 [dependencies.devout]
 version = "0.1"
 features = ["stdweb"]
