--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ is-it-maintained-open-issues = { repository = "libcala/wavy" }
 maintenance = { status = "actively-developed" }
 
 [dependencies.fon]
-version = "0.1"
+version = "0.2"
 
 # Use cala_core to support all of: wasm-pack, cargo-cala-web and cargo-web
 [target.'cfg(target_arch = "wasm32")'.dependencies.cala_core]
@@ -42,7 +42,7 @@ smelling_salts = "0.1"
 
 [dev-dependencies]
 pasts = "0.4"
-twang = { path = "../twang" }
+twang = "0.3"
 
 [package.metadata.docs.rs]
 all-features = true
@@ -55,5 +55,5 @@ cala = ["cala_core/cala"]
 stdweb = ["cala_core/stdweb"]
 wasm-bindgen = ["cala_core/wasm-bindgen"]
 
-[replace]
-"fon:0.1.0" = { path = "../fon" }
+# [replace]
+# "fon:0.1.0" = { path = "../fon" }
