Prepare to rework web port.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,49 +11,44 @@
 name = "wavy"
 version = "0.4.0"
 authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
-license = "Apache-2.0 OR Zlib"
+license = "Apache-2.0/Zlib"
 
-description = "Asynchronous cross-platform real-time audio recording & playback."
+description = """
+Asynchronous cross-platform real-time audio recording & playback.
+"""
 repository = "https://github.com/libcala/wavy"
 documentation = "https://docs.rs/wavy"
 homepage = "https://github.com/libcala/wavy/blob/master/CHANGELOG.md"
 include = ["Cargo.toml", "README.md", "LICENSE-ZLIB", "LICENSE-APACHE", "src/*"]
-categories = ["game-engines", "hardware-support", "multimedia", "multimedia::audio", "os"]
+categories = [
+    "game-engines", "hardware-support", "multimedia", "multimedia::audio", "os"
+]
 keywords = ["audio", "realtime", "cross-platform", "record", "play"]
 readme = "README.md"
 edition = "2018"
 
-[badges]
-travis-ci = { repository = "libcala/wavy" }
-is-it-maintained-issue-resolution = { repository = "libcala/wavy" }
-is-it-maintained-open-issues = { repository = "libcala/wavy" }
-maintenance = { status = "actively-developed" }
-
+# For all platforms
 [dependencies.fon]
 version = "0.2"
 
-# Use cala_core to support all of: wasm-pack, cargo-cala-web and cargo-web
-[target.'cfg(target_arch = "wasm32")'.dependencies.cala_core]
+# For Linux and Android
+[target.'cfg(all(not(target_arch = "wasm32"), any(target_os = "linux", target_os = "android")))'.dependencies.smelling_salts]
 version = "0.1"
-optional = true
 
-[target.'cfg(all(not(target_arch = "wasm32"), any(target_os = "linux", target_os = "android")))'.dependencies]
-smelling_salts = "0.1"
+# For Web Assembly
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+web-sys = "0.3"
 
+# Examples
 [dev-dependencies]
 pasts = "0.4"
 twang = "0.3"
 
+# Default to x86 64-bit Linux
 [package.metadata.docs.rs]
 all-features = true
 default-target = "x86_64-unknown-linux-gnu"
 
-[features]
-default = []
-docs-rs = []
-cala = ["cala_core/cala"]
-stdweb = ["cala_core/stdweb"]
-wasm-bindgen = ["cala_core/wasm-bindgen"]
-
+# Uncomment to replace dependencies with experimental versions.
 # [replace]
-# "fon:0.1.0" = { path = "../fon" }
+# "fon:0.2.0" = { path = "../fon" }
