--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,19 @@ version = "0.2"
 version = "0.1"
 
 # For Web Assembly
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-web-sys = "0.3"
+[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
+version = "0.3"
+features = [
+    "AudioContext",
+    "AudioContextOptions",
+    "AudioNode",
+    "AudioDestinationNode",
+    "ScriptProcessorNode",
+    "AudioProcessingEvent",
+    "AudioBuffer",
+]
+[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
+version = "0.2"
 
 # Examples
 [dev-dependencies]
