--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,13 @@ features = [
     "ScriptProcessorNode",
     "AudioProcessingEvent",
     "AudioBuffer",
+    "MediaStreamConstraints",
+    "Window",
+    "Navigator",
+    "MediaDevices",
+    "MediaStream",
+    "MediaStreamAudioSourceNode",
+    "MediaStreamAudioSourceOptions",
 ]
 [target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
 version = "0.2"
