--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        tc: [stable, beta, nightly]
+        tc: [stable, beta] # nightly - ICE
         cc:
         - aarch64-fuchsia
         - aarch64-linux-android
@@ -52,7 +52,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest]
-        tc: [stable, beta, nightly]
+        tc: [stable, beta] # nightly - ICE
         cc: [aarch64-apple-ios]
     steps:
     - uses: actions/checkout@v2
