--- a/examples/play/Cargo.toml
+++ b/examples/play/Cargo.toml
@@ -32,6 +32,9 @@ pasts = "0.7"
 twang = "0.6"
 wavy = { path = "../.." }
 
+# Logging
+devout = "0.2"
+
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
 
