--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,25 @@
-# Copyright Jeron Aldaron Lau 2019 - 2020.
-# Distributed under either the Apache License, Version 2.0
-#    (See accompanying file LICENSE_APACHE_2_0.txt or copy at
-#          https://apache.org/licenses/LICENSE-2.0),
-# or the Boost Software License, Version 1.0.
-#    (See accompanying file LICENSE_BOOST_1_0.txt or copy at
-#          https://www.boost.org/LICENSE_1_0.txt)
-# at your option. This file may not be copied, modified, or distributed except
-# according to those terms.
+# Wavy
+# Copyright © 2019-2021 Jeron Aldaron Lau.
+#
+# Licensed under any of:
+#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
+#  - MIT License (https://mit-license.org/)
+#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
+# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
+# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).
 
 [package]
 name = "wavy"
-version = "0.8.0"
+version = "0.8.1"
 authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
-license = "Apache-2.0 OR BSL-1.0"
+license = "Apache-2.0 OR MIT OR BSL-1.0"
 
 description = """
 Asynchronous cross-platform real-time audio recording & playback.
 """
 repository = "https://github.com/libcala/wavy"
 documentation = "https://docs.rs/wavy"
-homepage = "https://github.com/libcala/wavy/blob/master/CHANGELOG.md"
+homepage = "https://github.com/libcala/wavy/blob/main/CHANGELOG.md"
 include = ["Cargo.toml", "README.md", "src/*"]
 categories = [
     "game-engines", "hardware-support", "multimedia", "multimedia::audio", "os"
