Add `Listener` future.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,9 +33,14 @@ edition = "2018"
 path = "../../AldaronLau/fon"
 # version = "0.5"
 
+[dependencies.flume]
+version = "0.10"
+default-features = false
+features = ["async"]
+
 # For Linux and Android
 [target.'cfg(all(not(target_arch = "wasm32"), any(target_os = "linux", target_os = "android")))'.dependencies]
-smelling_salts = "0.4"
+smelling_salts = { path = "../../AldaronLau/smelling_salts" } # "0.4"
 dl_api = "0.4"
 
 # For Web Assembly
