--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,16 @@
-# Wavy
-# Copyright © 2019-2021 Jeron Aldaron Lau.
+# Copyright © 2019-2022 The Wavy Contributors.
 #
 # Licensed under any of:
 #  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
-#  - MIT License (https://mit-license.org/)
 #  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
+#  - MIT License (https://mit-license.org/)
 # At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
 # LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).
 
 [package]
 name = "wavy"
 version = "0.9.1"
-authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
-license = "Apache-2.0 OR MIT OR BSL-1.0"
+license = "Apache-2.0 OR BSL-1.0 OR MIT"
 
 description = """
 Asynchronous cross-platform real-time audio recording & playback.
